--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -12,3 +12,7 @@
         = article.title
       %td
         = article.text
+      %td
+        = link_to 'Show', article_path(article)
+      %td
+        = link_to 'Edit', edit_article_path(article)
