--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -6,5 +6,26 @@
   %strong Text:
   = @article.text
 
+%h2 Comments
+- @article.comments.each do |comment|
+  %p
+    %strong Commenter:
+    = comment.commenter
+  %p
+    %strong Comment:
+    = comment.body
+
+%h2 Add a comment:
+= form_for([@article, @article.comments.build]) do |f|
+  %p
+    = f.label :commenter
+    = f.text_field :commenter
+  %p
+    = f.label :body
+    = f.text_area :body
+  %p
+    = f.submit
+
+
 = link_to 'Back', articles_path
 = link_to 'Edit', edit_article_path(@article)
