--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -7,13 +7,7 @@
   = @article.text
 
 %h2 Comments
-- @article.comments.each do |comment|
-  %p
-    %strong Commenter:
-    = comment.commenter
-  %p
-    %strong Comment:
-    = comment.body
+= render @article.comments
 
 %h2 Add a comment:
 = form_for([@article, @article.comments.build]) do |f|
@@ -27,5 +21,5 @@
     = f.submit
 
 
-= link_to 'Back', articles_path
-= link_to 'Edit', edit_article_path(@article)
+= link_to 'Back to Articles', articles_path
+= link_to 'Edit Article', edit_article_path(@article)
